--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<!DOCTYPE html><html><head><title>포슬립 계산기</title><meta charset=utf-8><meta name=description content=pkmSleepCalcDescription><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">  <script type="module" crossorigin src="/pkmSleepCalc/assets/index.e34ef3bd.js"></script>
+<!DOCTYPE html><html><head><script async src="https://www.googletagmanager.com/gtag/js?id=G-84J0L3452K"></script><script>window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-84J0L3452K');</script><title>포슬립 계산기</title><meta charset=utf-8><meta name=description content=pkmSleepCalcDescription><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">  <script type="module" crossorigin src="/pkmSleepCalc/assets/index.4161af8f.js"></script>
   <link rel="stylesheet" href="/pkmSleepCalc/assets/index.3166eef4.css">
 </head><body><div id=q-app></div></body></html>
