--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
+    <meta property="og:title" content="포슬립 계산기">
+    <meta property="og:image" content="images/thumbnail.png">
+    <meta property="og:description" content="당신의 포켓몬을 완벽 분석해드립니다">
 
     <!-- <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
