--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
-    <meta property="og:title" content="포슬립 계산기">
+    <meta property="og:title" content="포슬립 계산기 by 두번째유리병">
     <meta property="og:image" content="https://extrabottle.github.io/pkmSleepCalc/images/thumbnail.png">
     <meta property="og:description" content="당신의 포켓몬을 완벽 분석해드립니다">
 
