add google adsense tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
       gtag('config', 'G-84J0L3452K');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5269959789341273"
+    crossorigin="anonymous"></script>
     <title><%= productName %></title>
 
     <meta charset="utf-8">
