--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><script async src="https://www.googletagmanager.com/gtag/js?id=G-84J0L3452K"></script><script>window.dataLayer = window.dataLayer || [];
+<!DOCTYPE html><html lang=ko><head><script async src="https://www.googletagmanager.com/gtag/js?id=G-84J0L3452K"></script><script>window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
