--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
     <meta property="og:image" content="https://extrabottle.github.io/pkmSleepCalc/images/thumbnail.png">
     <meta property="og:description" content="exp 계산부터 개체값 측정까지! 당신의 포켓몬을 완벽 분석해드립니다">
-
+    <meta property="og:title" content="포슬립 통합 계산기 - 두번째유리병">
     <!-- <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
